improve UI for dark mode, avoiding conflicts between light and dark side

--- a/src/components/table/TableScroll.css
+++ b/src/components/table/TableScroll.css
@@ -25,6 +25,10 @@ th {
   font-family: var(--heading);
 }
 
+body.dark th {
+  color: var(--text);
+}
+
 td p {
   max-width: 200px;
   overflow: hidden;
